# TibiaHouses

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  houses.csv  main.py  parse.py  pyproject.toml  requirements-dev.txt  requirements.txt  scrape_houses.py  setup.py  test_main.py
.github/workflows/: python-app.yml
data/: houses.csv
src/tibiahouses/: main.py
tests/: test_main.py
