[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tibiahouses"
version = "0.1.0"
description = "A web scraper for Tibia houses information"
authors = [
    { name = "Jesús", email = "Ojedalatronico@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []  # Will be filled from requirements.txt

[project.urls]
Homepage = "https://github.com/Ojedalatronico/TibiaHouses"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
